[tool.poetry]
name = "anymotion-sdk"
version = "1.2.4"
description = "AnyMotion SDK for Python"
authors = ["Yusuke Kumihashi <y_kumiha@nttpc.co.jp>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nttpc/anymotion-python-sdk"
homepage = "https://github.com/nttpc/anymotion-python-sdk"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
opencv-python = { version = "^4.4", optional = true }

[tool.poetry.extras]
cv = ["opencv-python"]

[tool.poetry.dev-dependencies]
bandit = "^1.7"
black = "^20.8b1"
coverage = "^5.5"
flake8 = "^3.9"
flake8-bugbear = "^21.4"
flake8-docstrings = "^1.6"
isort = "^5.8"
mypy = "^0.902"
pytest = "^6.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.5"
pre-commit = { version = "^2.11", python = "^3.6.1" }
requests-mock = "^1.7.0"
tox = "^3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
